<resources>
    <string name="app_name">MovieTracker</string>
    <string name="one">One</string>
    <string name="third">Third</string>
    <string name="second">Second</string>
    <string name="password">Password</string>
    <string name="overview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tempus velit vitae enim sollicitudin, quis ultricies neque cursus. Nam vitae eleifend quam.</string>
    <string name="user_name">User Name</string>
    <string name="text_login">login</string>
    <string name="don_t_have_account_click_here">Don\'t have account? click here.</string>
    <string name="text_register">register</string>
    <string name="member">Already Member? click here.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="movieName">Movie name</string>
    <string name="no_movies">No Movies Added To Favorites</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="default_year">2017</string>
    <string name="default_rating">4.5</string>
    <string name="out_of">/5</string>
    <string name="list_of_trailers">List Of Trailers</string>
    <string name="overview_default">OverView</string>
</resources>

