<?xml version="1.0" encoding="utf-8"?>


<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nestedScrollView_login_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/sign_in_background4"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.Login"
    android:padding="40dp">
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo2"
            android:layout_gravity="center_horizontal"
           />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_user_login_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_face_black_24dp"

            android:textColorHint="@color/white">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/user_input_login_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:textColorHint="@color/white"
                android:layout_margin="3dp"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/white"
                android:backgroundTint="@color/white"
                android:textColorHighlight="@color/colorAccent"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_password_login_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/white">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_input_login_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/white"
                android:layout_margin="3dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHighlight="@color/colorAccent"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_button_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:elevation="8dp"
            android:text="@string/text_login"/>
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/to_register_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/don_t_have_account_click_here"
            android:textSize="16dp"
            android:textColor="@color/white"/>
    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>