<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:fitsSystemWindows="true"
android:background="@color/white"
tools:context=".activities.MovieDetailsActivity">

<android.support.design.widget.AppBarLayout
    android:layout_height="300dp"
    android:layout_width="match_parent"
    android:id="@+id/appbar"
    >

    <android.support.design.widget.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:contentScrim="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        app:layout_collapseMode="pin"
        android:id="@+id/movie_details_collapsing_toolbar">

        <ImageView
            android:id="@+id/movie_image_id_details"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:fitsSystemWindows="true"
            android:scaleType="centerCrop"
            app:layout_collapseMode="parallax"
            app:layout_collapseParallaxMultiplier="0.7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <android.support.v7.widget.Toolbar
            android:id="@+id/movie_details_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
            app:layout_collapseMode="pin"
            >

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.CollapsingToolbarLayout>


</android.support.design.widget.AppBarLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="-60dp"
        android:background="@color/colorAccent"
        android:src="@drawable/heart_off"
        app:layout_anchor="@+id/appbar"
        app:layout_anchorGravity="bottom|end" />
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:layout_editor_absoluteY="303dp"
        android:layout_margin="0dp">



        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
           >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:layout_margin="10dp"
                >

                <ImageView
                    android:id="@+id/main_image_detail_id"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:transitionName="shared_image" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="0dp"
                android:layout_weight="1.25"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/details_movie_name_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="monospace"
                    android:text="@string/app_name"

                    android:textSize="@dimen/middle_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_year"
                    android:id="@+id/details_movie_date_id"
                    android:textSize="@dimen/default_size" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_rating"
                        android:id="@+id/vote_average_id"
                        android:textSize="@dimen/bold_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/out_of"
                        android:textSize="@dimen/bold_size"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:padding="20dp"
            android:background="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/overview_default"
                    android:textSize="@dimen/default_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/details_overview_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/overview" />
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_of_trailers"
                android:layout_margin="5dp"
                android:textSize="@dimen/default_size"
                android:textStyle="bold"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_details_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    </android.support.v4.widget.NestedScrollView>






</android.support.design.widget.CoordinatorLayout>